# openafis

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
cli/: CMakeLists.txt  Main.cpp
data/: extract.bat  extract.py
data/fvc2002/DB1_B/: 101_1.iso  101_6.iso  101_8.iso  102_1.iso  102_4.iso  102_5.iso  102_8.iso  104_1.iso  104_3.iso  104_5.iso  104_7.iso  105_1.iso  105_2.iso  105_4.iso  105_6.iso  105_8.iso  106_1.iso  106_4.iso  106_5.iso  106_7.iso  107_2.iso  107_3.iso  107_4.iso  107_5.iso  107_8.iso  108_1.iso  108_4.iso  108_5.iso  108_6.iso  108_7.iso  109_4.iso  109_5.iso  110_1.iso  110_2.iso  110_4.iso  110_6.iso  110_7.iso  110_8.iso
data/fvc2002/DB2_B/: 101_1.iso  101_2.iso  101_5.iso  101_7.iso  102_1.iso  102_2.iso  102_5.iso  102_7.iso  102_8.iso  103_2.iso  103_5.iso  103_7.iso  103_8.iso  104_5.iso  105_2.iso  105_4.iso  105_5.iso  105_6.iso  105_7.iso  106_1.iso  106_2.iso  106_3.iso  106_5.iso  106_6.iso  106_8.iso  107_2.iso  107_4.iso  107_5.iso  107_6.iso  107_7.iso  107_8.iso  108_4.iso  108_6.iso  108_7.iso  108_8.iso  109_4.iso  109_6.iso  109_8.iso  110_1.iso  110_7.iso
data/fvc2002/DB3_B/: 101_2.iso  101_3.iso  101_6.iso  101_8.iso  102_2.iso  102_3.iso  102_5.iso  102_6.iso  102_7.iso  102_8.iso  103_1.iso  103_2.iso  103_3.iso  103_6.iso  103_8.iso  104_2.iso  104_3.iso  104_5.iso  104_7.iso  104_8.iso  105_1.iso  105_4.iso  105_5.iso  105_6.iso  105_7.iso  105_8.iso  106_2.iso  106_3.iso  106_4.iso  106_7.iso  107_1.iso  107_3.iso  107_6.iso  107_7.iso  107_8.iso  108_4.iso  108_7.iso  109_2.iso  109_3.iso  109_4.iso  (+5 more)
data/fvc2002/DB4_B/: 101_1.iso  101_4.iso  101_6.iso  102_3.iso  102_4.iso  102_5.iso  102_6.iso  102_7.iso  102_8.iso  103_1.iso  103_2.iso  103_4.iso  103_5.iso  103_6.iso  103_8.iso  104_1.iso  104_4.iso  105_1.iso  105_4.iso  105_5.iso  105_6.iso  105_8.iso  106_3.iso  106_5.iso  107_1.iso  107_2.iso  107_3.iso  107_6.iso  108_1.iso  108_3.iso  108_4.iso  108_5.iso  108_6.iso  108_7.iso  109_2.iso  109_3.iso  109_4.iso  109_6.iso  109_7.iso  110_1.iso  (+4 more)
data/fvc2004/DB1_B/: 101_1.tif  101_4.iso  102_1.tif  102_2.tif  102_3.iso  102_4.tif  102_7.tif  102_8.tif  103_1.iso  103_2.tif  103_3.iso  103_4.iso  103_4.tif  103_7.tif  103_8.tif  104_1.iso  104_1.tif  104_4.tif  104_6.iso  104_6.tif  104_7.tif  104_8.iso  105_2.iso  105_2.tif  105_3.tif  105_4.iso  105_4.tif  105_5.iso  105_5.tif  105_6.iso  105_7.iso  106_1.iso  106_1.tif  106_2.tif  106_4.iso  106_6.tif  106_7.tif  106_8.iso  106_8.tif  107_1.iso  (+27 more)
data/fvc2004/DB2_B/: 101_1.iso  101_6.iso  (+24 more)
examples/: OneMany.cpp
lib/: CMakeLists.txt  Config.h  Dimensions.h  FastMath.cpp  FastMath.h  Field.h  Fingerprint.cpp  Fingerprint.h  LMTS.h  Log.h  Match.cpp  Match.h  MatchMany.cpp  MatchMany.h  Minutia.h  MinutiaPoint.h  OpenAFIS.cpp  OpenAFIS.h  Pair.h  Param.cpp  Param.h  Render.cpp  Render.h  Score.cpp  Score.h  StringUtil.h  Template.cpp  Template.h  TemplateCSV.cpp  TemplateCSV.h  TemplateISO19794_2_2005.cpp  TemplateISO19794_2_2005.h  ThreadPool.h  Triplet.cpp  Triplet.h  TripletSIMD.cpp  TripletSIMD.h  TripletScalar.cpp  TripletScalar.h
logo/: LICENSE
qt/: cli.pro  examples.pro  openafis.pro  tests.pro
results/: fvs2002_2004_many_many.csv
tests/: Tests.cpp
(+913 files in other folders)
